fix: overflow hidden for body

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,7 +1,9 @@
 main {
     overflow: hidden;
 }
-
+body {
+    overflow-x: hidden;
+}
 #homeHero {
     color: var(--clr-beige);
     font-size: var(--fs-body-big);
